[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo-pik"
description = 'Demo Package Installer for Kaprien'
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Kairo de Araujo", email = "kairo@dearaujo.nl" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["tuf", "click"]
dynamic = ["version"]

[tool.hatch.version]
path = "pik/__about__.py"

[project.scripts]
demo-pik = "pik.cli:cli"